[gd_scene load_steps=37 format=3 uid="uid://bwrbp5hm8j3ht"]

[ext_resource type="Script" path="res://scripts/level.gd" id="1_0036a"]
[ext_resource type="Script" path="res://scripts/BigWheels.gd" id="2_lp6qe"]
[ext_resource type="FontFile" uid="uid://cwgup3btg70pd" path="res://assets/fonts/GreatVibes-Regular.otf" id="3_gyr7l"]
[ext_resource type="Animation" uid="uid://csu2yusiebsq8" path="res://animations/advanced_whirl.res" id="4_uj21c"]
[ext_resource type="Animation" uid="uid://bn3dvg6vmyvaq" path="res://animations/beginner_prelude.res" id="5_iefvy"]
[ext_resource type="Animation" uid="uid://wxey7xwd1f1r" path="res://animations/intermediate_hocket_canon.res" id="6_qffmp"]
[ext_resource type="Animation" uid="uid://dkwcfm8sp1sjm" path="res://animations/intermediate_spinning.res" id="7_b4mwu"]
[ext_resource type="Animation" uid="uid://bgs8tlhpwys71" path="res://animations/intermediate_vines.res" id="8_s5ktr"]
[ext_resource type="Animation" uid="uid://bawd5t1e1pn3" path="res://animations/tutorial_onewheel.res" id="9_qv4oj"]
[ext_resource type="Environment" uid="uid://daq2qgxejb7j3" path="res://assets/environments/Sunset.tres" id="10_qme16"]
[ext_resource type="Shader" uid="uid://b0il2ry0653b0" path="res://mesh/3d_test.tres" id="11_0esu8"]
[ext_resource type="Shader" uid="uid://bns4uwtyb40yw" path="res://mesh/clouds.res" id="12_8l0hf"]
[ext_resource type="Script" path="res://scripts/AudioreactiveDirectionalLight3D.gd" id="13_ieon2"]
[ext_resource type="Script" path="res://scripts/AudioreactiveDirectionalLight3D_2.gd" id="14_u8ibe"]
[ext_resource type="FontFile" uid="uid://nbjcntuombpn" path="res://assets/fonts/Pacifico.ttf" id="15_oai36"]
[ext_resource type="PackedScene" uid="uid://k4uqm2lhm6k2" path="res://scenes/gameOverScreen.tscn" id="16_wlgho"]

[sub_resource type="Animation" id="Animation_lswjq"]
resource_name = "entry"
length = 3.0
tracks/0/type = "position_3d"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("..")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = PackedFloat32Array(0, 1, 0, 0, 15.07, 3, 1, 0, 0, 4.4)
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("../../..:Fog")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 3),
"transitions": PackedFloat32Array(1, 2.92817),
"update": 0,
"values": [0.85, 0.0]
}

[sub_resource type="Animation" id="Animation_fsypk"]
resource_name = "running"
length = 30.0
loop_mode = 1
tracks/0/type = "rotation_3d"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("..")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = PackedFloat32Array(0, 1, 0, 0.199368, 0, 0.979925, 9, 1, 0, -0.160743, 0, 0.986996, 21.6, 1, -0.0775973, -0.147354, -0.011597, 0.985967, 29.9, 1, 0, 0.199368, 0, 0.979925)

[sub_resource type="AnimationLibrary" id="AnimationLibrary_c2brf"]
_data = {
"entry": SubResource("Animation_lswjq"),
"running": SubResource("Animation_fsypk")
}

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_77rop"]
albedo_color = Color(0.785259, 0.119527, 0.0665151, 1)
emission = Color(0.239216, 0.619608, 0.309804, 1)
emission_energy_multiplier = 0.79

[sub_resource type="TextMesh" id="TextMesh_c5u4q"]
material = SubResource("StandardMaterial3D_77rop")
text = "Almost!"
font = ExtResource("3_gyr7l")
font_size = 27
pixel_size = 0.013

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_2sybf"]
albedo_color = Color(0.184314, 0.560784, 0.262745, 1)
emission = Color(0.239216, 0.619608, 0.309804, 1)
emission_energy_multiplier = 0.79

[sub_resource type="TextMesh" id="TextMesh_0bo5k"]
material = SubResource("StandardMaterial3D_2sybf")
text = "Nice!"
font = ExtResource("3_gyr7l")
font_size = 27
pixel_size = 0.013

[sub_resource type="Animation" id="Animation_3vw6k"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0.865, -0.62, 2.01)]
}

[sub_resource type="Animation" id="Animation_7g07j"]
resource_name = "show_left"
length = 1.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("../Left:position:y")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.8, 1),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [-1.615, -0.675, -0.675, -1.615]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("../Left:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.1, 1.3),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}

[sub_resource type="Animation" id="Animation_sapaj"]
resource_name = "show_right"
length = 1.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position:y")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.8, 1),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [-1.615, -0.675, -0.675, -1.615]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.1, 1.3),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_88owl"]
_data = {
"RESET": SubResource("Animation_3vw6k"),
"show_left": SubResource("Animation_7g07j"),
"show_right": SubResource("Animation_sapaj")
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_mug7h"]
_data = {
"advanced_whirl": ExtResource("4_uj21c"),
"beginner_prelude": ExtResource("5_iefvy"),
"intermediate_hocket_canon": ExtResource("6_qffmp"),
"intermediate_spinning": ExtResource("7_b4mwu"),
"intermediate_vines": ExtResource("8_s5ktr"),
"tutorial_onewheel": ExtResource("9_qv4oj")
}

[sub_resource type="FastNoiseLite" id="FastNoiseLite_0l7p0"]
frequency = 0.0074

[sub_resource type="NoiseTexture2D" id="NoiseTexture2D_7d8me"]
seamless = true
as_normal_map = true
bump_strength = 32.0
noise = SubResource("FastNoiseLite_0l7p0")

[sub_resource type="ShaderMaterial" id="ShaderMaterial_dxe38"]
render_priority = 0
shader = ExtResource("11_0esu8")
shader_parameter/Texture2DParameter = SubResource("NoiseTexture2D_7d8me")

[sub_resource type="PlaneMesh" id="PlaneMesh_c12ko"]
lightmap_size_hint = Vector2i(502, 502)
material = SubResource("ShaderMaterial_dxe38")
size = Vector2(100, 100)
subdivide_width = 50
subdivide_depth = 50

[sub_resource type="ShaderMaterial" id="ShaderMaterial_hclrk"]
render_priority = 0
shader = ExtResource("12_8l0hf")

[sub_resource type="SphereMesh" id="SphereMesh_hljms"]
material = SubResource("ShaderMaterial_hclrk")
flip_faces = true
radius = 17.995
height = 14.45
is_hemisphere = true

[sub_resource type="Animation" id="Animation_3ornh"]
resource_name = "hide"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_51fyo"]
_data = {
"hide": SubResource("Animation_3ornh")
}

[node name="Main" type="Node3D"]
script = ExtResource("1_0036a")
Fog = 0.85

[node name="BigWheels" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.493, 0)
script = ExtResource("2_lp6qe")

[node name="Right" type="Node3D" parent="BigWheels"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 5, 0, 0)

[node name="Left" type="Node3D" parent="BigWheels"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -5, 0, 0)

[node name="MainCam" type="Node3D" parent="BigWheels"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 15.07)

[node name="Camera3D" type="Camera3D" parent="BigWheels/MainCam"]
current = true
fov = 52.8573

[node name="AnimationPlayer" type="AnimationPlayer" parent="BigWheels/MainCam/Camera3D"]
libraries = {
"": SubResource("AnimationLibrary_c2brf")
}

[node name="OmniLight3D" type="OmniLight3D" parent="BigWheels"]
transform = Transform3D(0.963631, 0, -0.267238, 0, 1, 0, 0.267238, 0, 0.963631, 0.12, -0.54, 2.152)
light_energy = 0.9
light_specular = 1.335
shadow_enabled = true
shadow_opacity = 0.16
shadow_blur = 0.0

[node name="ReactionNotes" type="Node3D" parent="BigWheels"]

[node name="Right" type="MeshInstance3D" parent="BigWheels/ReactionNotes"]
transform = Transform3D(0.925085, 0.0401331, -0.25339, 0, 0.948181, 0.150177, 0.256549, -0.144715, 0.913696, 0.865, -0.62, 2.01)
visible = false
mesh = SubResource("TextMesh_c5u4q")
skeleton = NodePath("../../Right")

[node name="Left" type="MeshInstance3D" parent="BigWheels/ReactionNotes"]
transform = Transform3D(0.925085, -0.0401331, 0.25339, 0, 0.948181, 0.150177, -0.256549, -0.144715, 0.913696, -0.865, -1.615, 2.01)
visible = false
mesh = SubResource("TextMesh_0bo5k")
skeleton = NodePath("../../Right")

[node name="AnimationPlayer" type="AnimationPlayer" parent="BigWheels/ReactionNotes"]
root_node = NodePath("../Right")
libraries = {
"": SubResource("AnimationLibrary_88owl")
}

[node name="AnimationPlayer2" type="AnimationPlayer" parent="BigWheels/ReactionNotes"]
root_node = NodePath("../Right")
libraries = {
"": SubResource("AnimationLibrary_88owl")
}

[node name="SongPlayer" type="AnimationPlayer" parent="."]
audio_max_polyphony = 64
libraries = {
"": SubResource("AnimationLibrary_mug7h")
}

[node name="NotePlayer2_L" type="AudioStreamPlayer" parent="SongPlayer"]
volume_db = -3.0
max_polyphony = 8
bus = &"player_left"

[node name="NotePlayer2_R" type="AudioStreamPlayer" parent="SongPlayer"]
volume_db = -3.0
max_polyphony = 8
bus = &"player_right"

[node name="NotePlayer3_L" type="AudioStreamPlayer" parent="SongPlayer"]
volume_db = -3.0
max_polyphony = 8
bus = &"player_left"

[node name="NotePlayer3_R" type="AudioStreamPlayer" parent="SongPlayer"]
volume_db = -3.0
max_polyphony = 8
bus = &"player_right"

[node name="NotePlayer4_L" type="AudioStreamPlayer" parent="SongPlayer"]
volume_db = -3.0
max_polyphony = 8
bus = &"player_left"

[node name="NotePlayer4_R" type="AudioStreamPlayer" parent="SongPlayer"]
volume_db = -3.0
max_polyphony = 8
bus = &"player_right"

[node name="NotePlayer5_L" type="AudioStreamPlayer" parent="SongPlayer"]
volume_db = -3.0
max_polyphony = 8
bus = &"player_left"

[node name="NotePlayer5_R" type="AudioStreamPlayer" parent="SongPlayer"]
volume_db = -3.0
max_polyphony = 8
bus = &"player_right"

[node name="NotePlayer6_L" type="AudioStreamPlayer" parent="SongPlayer"]
volume_db = -3.0
max_polyphony = 8
bus = &"player_left"

[node name="NotePlayer6_R" type="AudioStreamPlayer" parent="SongPlayer"]
volume_db = -3.0
max_polyphony = 8
bus = &"player_right"

[node name="NotePlayer7_L" type="AudioStreamPlayer" parent="SongPlayer"]
volume_db = -3.0
max_polyphony = 8
bus = &"player_left"

[node name="NotePlayer7_R" type="AudioStreamPlayer" parent="SongPlayer"]
volume_db = -3.0
max_polyphony = 8
bus = &"player_right"

[node name="NotePlayer8_L" type="AudioStreamPlayer" parent="SongPlayer"]
volume_db = -3.0
max_polyphony = 8
bus = &"player_left"

[node name="NotePlayer8_R" type="AudioStreamPlayer" parent="SongPlayer"]
volume_db = -3.0
max_polyphony = 8
bus = &"player_right"

[node name="NotePlayer9_L" type="AudioStreamPlayer" parent="SongPlayer"]
volume_db = -3.0
max_polyphony = 8
bus = &"player_left"

[node name="NotePlayer9_R" type="AudioStreamPlayer" parent="SongPlayer"]
volume_db = -3.0
max_polyphony = 8
bus = &"player_right"

[node name="NotePlayer10_L" type="AudioStreamPlayer" parent="SongPlayer"]
volume_db = -3.0
max_polyphony = 8
bus = &"player_left"

[node name="NotePlayer10_R" type="AudioStreamPlayer" parent="SongPlayer"]
volume_db = -3.0
max_polyphony = 8
bus = &"player_right"

[node name="NotePlayer11_L" type="AudioStreamPlayer" parent="SongPlayer"]
volume_db = -3.0
max_polyphony = 8
bus = &"player_left"

[node name="NotePlayer11_R" type="AudioStreamPlayer" parent="SongPlayer"]
volume_db = -3.0
max_polyphony = 8
bus = &"player_right"

[node name="NotePlayer12_L" type="AudioStreamPlayer" parent="SongPlayer"]
volume_db = -3.0
max_polyphony = 8
bus = &"player_left"

[node name="NotePlayer12_R" type="AudioStreamPlayer" parent="SongPlayer"]
volume_db = -3.0
max_polyphony = 8
bus = &"player_right"

[node name="ReflectionProbe" type="ReflectionProbe" parent="."]
intensity = 0.33
max_distance = 20.9
size = Vector3(8.39568, 12.6418, 7.98332)

[node name="BackingAudio" type="Node" parent="."]

[node name="accompaniment1" type="AudioStreamPlayer" parent="BackingAudio"]
volume_db = -6.0
max_polyphony = 16
bus = &"backing track"

[node name="accompaniment2" type="AudioStreamPlayer" parent="BackingAudio"]
volume_db = -6.0
max_polyphony = 8
bus = &"backing track"

[node name="Backdrop" type="Node3D" parent="."]

[node name="WorldEnvironment" type="WorldEnvironment" parent="Backdrop"]
environment = ExtResource("10_qme16")

[node name="Sunset" type="Node3D" parent="Backdrop"]

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="Backdrop/Sunset"]
transform = Transform3D(1, 0, 0, 0, -0.99961, 0.0279215, 0, -0.0279215, -0.99961, 0, 6.63931, 2.46136)
light_color = Color(1, 1, 0.886275, 1)
light_angular_distance = 4.49
shadow_enabled = true
shadow_bias = 2.98
shadow_opacity = 0.3

[node name="Water" type="MeshInstance3D" parent="Backdrop/Sunset"]
mesh = SubResource("PlaneMesh_c12ko")
skeleton = NodePath("../../..")

[node name="Clouds" type="MeshInstance3D" parent="Backdrop/Sunset"]
transform = Transform3D(0.999846, -0.0175571, 0, 0.0175571, 0.999846, 0, 0, 0, 1, -0.00479043, -0.0146099, -4.595)
mesh = SubResource("SphereMesh_hljms")
skeleton = NodePath("../../..")

[node name="audioReactiveLight1" type="DirectionalLight3D" parent="."]
transform = Transform3D(0.980126, 0.102734, -0.169702, -0.16698, 0.889103, -0.426162, 0.107101, 0.446029, 0.888587, -17.4125, 3.03929, 5.76672)
light_energy = 2.007
script = ExtResource("13_ieon2")

[node name="audioReactiveLight2" type="DirectionalLight3D" parent="."]
transform = Transform3D(0.997894, -0.0335913, 0.0554876, 0.0183505, -0.674302, -0.738228, 0.0622134, 0.737692, -0.672265, 9.1461, 3.03929, 5.10481)
light_energy = 2.007
script = ExtResource("14_u8ibe")

[node name="ui" type="CanvasLayer" parent="."]

[node name="scoreLabel" type="Label" parent="ui"]
offset_left = 30.0
offset_top = 10.0
offset_right = 228.0
offset_bottom = 58.0
theme_override_colors/font_color = Color(0.784314, 0.392157, 0.588235, 0.588235)
theme_override_fonts/font = ExtResource("15_oai36")
theme_override_font_sizes/font_size = 24
text = "score:"

[node name="score" type="Label" parent="ui"]
offset_left = 30.0
offset_top = 6.0
offset_right = 205.0
offset_bottom = 144.0
theme_override_colors/font_color = Color(0.784314, 0.392157, 0.588235, 0.588235)
theme_override_fonts/font = ExtResource("15_oai36")
theme_override_font_sizes/font_size = 64
text = "0"

[node name="scoreFeedback" type="Label" parent="ui"]
offset_left = 30.0
offset_top = 100.0
offset_right = 228.0
offset_bottom = 148.0
theme_override_colors/font_color = Color(0.784314, 0.392157, 0.588235, 0.588235)
theme_override_fonts/font = ExtResource("15_oai36")
theme_override_font_sizes/font_size = 24

[node name="AnimationPlayer" type="AnimationPlayer" parent="ui/scoreFeedback"]
libraries = {
"": SubResource("AnimationLibrary_51fyo")
}

[node name="Control" type="Control" parent="ui"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="debug" type="Label" parent="ui/Control"]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -23.0
grow_horizontal = 2
grow_vertical = 0
size_flags_horizontal = 4
size_flags_vertical = 8
horizontal_alignment = 1

[node name="gameOverScreen" parent="." instance=ExtResource("16_wlgho")]

[node name="finalScore" type="Label" parent="gameOverScreen"]
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_top = -42.0
offset_bottom = 42.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0.737255, 0.215686, 0.388235, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("3_gyr7l")
theme_override_font_sizes/font_size = 96
text = "0"
horizontal_alignment = 1

[connection signal="animation_finished" from="SongPlayer" to="." method="_on_song_player_animation_finished"]
